Thu Aug 21 20:53:46 2003  Kristian Rietveld  <kris@gtk.org>

	Slightly modified patch from Yann Rouillard to improve selection
	behavior with the mouse. Fixes #120187.

	* gtk/gtktreeview.c (gtk_tree_view_button_press): only
	select/deselect items on the first button press of button 1,
	expand checks for row_activated to include triple clicks.

Thu Aug 21 01:33:51 2003  Kristian Rietveld  <kris@gtk.org>

	Merge from stable.

	* gtk/gtkspinbutton.c (gtk_spin_button_size_request): always round
	approximate digit widths up, to avoid truncation, convert to
	pango pixels when we have the full string width instead of converting
	the approx digit width to pango pixels, take inner border and
	interior focus into account correctly. (Fixes #116368, patch from
	Morten Welinder).

2003-08-20  Noah Levitt  <nlevitt@columbia.edu>

	* gtk/queryimmodules.c: Don't look at the same directory twice (in
	simple cases). (#120342)

Wed Aug 20 22:04:47 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gdk/gdkwindow.c: Make the layers in the paint stack have their
	own pixmap instead of sharing one. (#118317)

	* tests/testgtk.c (create_get_image): Fixes to make the window fit
	on an 800x600 screen

Wed Aug 20 22:03:25 2003  Kristian Rietveld  <kris@gtk.org>

	Merged from stable.

	* gtk/gtkspinbutton.c (start_spinning): change the type of step
	to gdouble, since it gets it's data from a gdouble (Fixes #113547).

Mon Aug 18 17:19:12 2003  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.[ch]: Substantially
	rework the handling of status windows:
	
	 - Store the current StatusWindow in the 
	   GtkIMContextXIM structure and vice-versa, so we
	   don't have to hunt the window hierarchy on
	   cleanup.
	 - Use the Gtkidget hierarchy instead of/or as well
	   as the GdkWindow hierarchy when finding the toplevel;
	   this helps for things like GtkHandlebox
	 - Watch GtkWidget::hierarchy_changed to catch 
	   changes in the toplevel without changes in the